--- a/web/framwork/whhJsFrame/css/site.css
+++ b/web/framwork/whhJsFrame/css/site.css
@@ -1,3 +1,6 @@
 * {
-    font-family:"Microsoft Yahei",微软雅黑,"Helvetica Neue",Arial,sans-serif;
+/*font-family:"Microsoft Yahei",微软雅黑,"Helvetica Neue",Arial,sans-serif; */
+
+    font-family:"STHeiti Light",华文细黑,"STHeiti",华文黑体,"Microsoft YaHei",微软雅黑,"Helvetica Neue",Arial,sans-serif;
+
 }
